# for-my-gf

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrigthconfig.json
alembic/: env.py
alembic/versions/: 2025_05_07_1832-a2928587acad_base_tables.py  2025_05_11_2206-b17afaf933ec_init_tables.py  2025_05_12_2253-7f62e781ce54_apikey_table.py  2025_05_17_1644-ad2dd68987de_constraint_unique_index_for_content.py
src/: main.py  project_utils.py
src/admin/: auth.py  models.py
src/bot/: bot.py
src/bot/handlers/: commands.py  content.py
src/bot/middlewares/: db.py
src/bot/utils/: db.py
src/config/: settings.py
src/database/: config.py  models.py
src/storage/: minio.py  redis.py
src/storage/database/: base.py  config.py  models.py
