[project]
name = "for-my-gf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "pre-commit>=4.2.0",
    "taskiq>=0.11.17",
    "wemake-python-styleguide>=1.1.0",
]
